Verified the ubuntu deploy docs on a fresh system